--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
         </div>
       </section>
     </main>
-    <footer class="container-fluid bg-dark text-light p-5">
-      <div class="d-flex justify-content-center align-items-bottom">
+    <footer class="container-fluid bg-dark text-light pb-5" style="padding-top:15rem; ">
+      <div class="d-flex justify-content-center align-items-end">
         <span> &copy; Helplama 2021</span>
       </div>
     </footer>
